--- a/style.css
+++ b/style.css
@@ -344,11 +344,11 @@ header {
 
 @media screen and (min-width: 1200px) {
   .homepage .txt h1 {
-    font-size: 80px;
+    font-size: 72px; /* Adjusted size for larger screens */
   }
 
   .homepage .txt p {
-    font-size: 24px;
+    font-size: 20px; /* Adjusted size for larger screens */
   }
 
   .container a {
@@ -356,11 +356,11 @@ header {
   }
 
   .head h1 {
-    font-size: 36px;
+    font-size: 32px; /* Adjusted size for larger screens */
   }
 
   .head p {
-    font-size: 18px;
+    font-size: 16px; /* Adjusted size for larger screens */
   }
 
   .serv {
@@ -369,15 +369,15 @@ header {
   }
 
   .serv h2 {
-    font-size: 24px;
+    font-size: 20px; /* Adjusted size for larger screens */
   }
 
   .serv p {
-    font-size: 16px;
+    font-size: 14px; /* Adjusted size for larger screens */
   }
 
   .txt2 h2 {
-    font-size: 36px;
+    font-size: 32px;
   }
 
   .company-info h3,
@@ -386,7 +386,7 @@ header {
   .mission-vision p,
   .team h3,
   .team ul {
-    font-size: 18px;
+    font-size: 16px; /* Adjusted size for larger screens */
   }
 
   .team ul {
@@ -394,11 +394,11 @@ header {
   }
 
   .contact h2 {
-    font-size: 36px;
+    font-size: 32px;
   }
 
   .contact p {
-    font-size: 18px;
+    font-size: 16px; /* Adjusted size for larger screens */
   }
 }
 
