--- a/style.css
+++ b/style.css
@@ -401,5 +401,85 @@ header {
     font-size: 16px; /* Adjusted size for larger screens */
   }
 }
+@media screen and (max-width: 600px) {
+  header {
+    height: auto;
+  }
 
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .hli {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .homepage .txt h1 {
+    font-size: 40px;
+  }
+
+  .homepage .txt p {
+    font-size: 14px;
+  }
+
+  .container a {
+    padding: 15px 30px;
+    font-size: 16px;
+  }
+
+  .head h1 {
+    font-size: 28px;
+  }
+
+  .head p {
+    font-size: 14px;
+  }
+
+  .serv {
+    width: 100%;
+    margin: 20px 0;
+  }
+
+  .serv h2 {
+    font-size: 18px;
+  }
+
+  .serv p {
+    font-size: 14px;
+  }
+
+  .txt2 h2 {
+    font-size: 28px;
+  }
+
+  .company-info h3,
+  .company-info p,
+  .mission-vision h3,
+  .mission-vision p,
+  .team h3,
+  .team ul {
+    font-size: 14px;
+  }
+
+  .team ul {
+    margin-left: 0;
+    padding-left: 20px;
+  }
+
+  .contact h2 {
+    font-size: 28px;
+  }
+
+  .contact p {
+    font-size: 14px;
+  }
+
+  .form {
+    max-width: 100%;
+  }
+}
 
