--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
-
-
 * {
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-body{
-  background-color: rgb(242, 242, 242);
+
+body {
+  background-color: #f2f2f2;
 }
 
 header {
@@ -15,28 +13,16 @@ header {
   background-color: #333333;
   height: 8vh;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .navbar {
   padding: 0 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   height: 8vh;
   width: 100%;
   max-width: 1200px;
@@ -50,8 +36,6 @@ header {
 }
 
 .hli {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   list-style: none;
   gap: 40px;
@@ -66,32 +50,17 @@ header {
 .homepage {
   background: url(family-camping-at-sunset.jpg) center/cover;
   height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   height: 85%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .txt {
@@ -119,8 +88,7 @@ header {
   border: 2px solid #fff;
   color: black;
   text-decoration: none;
-  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
 
 .container a:hover {
@@ -134,13 +102,8 @@ header {
 }
 
 .head {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   text-align: center;
 }
 
@@ -161,22 +124,16 @@ header {
   height: 73%;
   margin: 10px auto;
   border-radius: 5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .serv {
   background: #ffffff;
   padding: 40px 15px;
   border-radius: 5px;
-  -webkit-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.04);
-          box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.04);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.04);
   margin: 20px 25px;
   width: 360px;
   height: 340px;
@@ -188,8 +145,7 @@ header {
   height: 120px;
   margin-bottom: 20px;
   border-radius: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .info p {
@@ -206,16 +162,9 @@ header {
   background: #f2f2f2;
   margin: 40px auto;
   height: 90vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   padding: 80px 0 0;
 }
 
@@ -267,32 +216,18 @@ header {
 
 .rowc {
   margin-top: 60px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: row;
+  justify-content: space-between;
   margin-left: 20%;
   margin-right: 20%;
 }
 
 .contact-details {
   margin-top: 65px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .contact-details p {
@@ -340,146 +275,3 @@ header {
 .form button:hover {
   background-color: #777777;
 }
-/* Your existing styles */
-
-@media screen and (min-width: 1200px) {
-  .homepage .txt h1 {
-    font-size: 72px; /* Adjusted size for larger screens */
-  }
-
-  .homepage .txt p {
-    font-size: 20px; /* Adjusted size for larger screens */
-  }
-
-  .container a {
-    font-size: 20px;
-  }
-
-  .head h1 {
-    font-size: 32px; /* Adjusted size for larger screens */
-  }
-
-  .head p {
-    font-size: 16px; /* Adjusted size for larger screens */
-  }
-
-  .serv {
-    width: 360px;
-    margin: 20px 25px;
-  }
-
-  .serv h2 {
-    font-size: 20px; /* Adjusted size for larger screens */
-  }
-
-  .serv p {
-    font-size: 14px; /* Adjusted size for larger screens */
-  }
-
-  .txt2 h2 {
-    font-size: 32px;
-  }
-
-  .company-info h3,
-  .company-info p,
-  .mission-vision h3,
-  .mission-vision p,
-  .team h3,
-  .team ul {
-    font-size: 16px; /* Adjusted size for larger screens */
-  }
-
-  .team ul {
-    margin-left: -20px;
-  }
-
-  .contact h2 {
-    font-size: 32px;
-  }
-
-  .contact p {
-    font-size: 16px; /* Adjusted size for larger screens */
-  }
-}
-@media screen and (max-width: 600px) {
-  header {
-    height: auto;
-  }
-
-  .navbar {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .hli {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .homepage .txt h1 {
-    font-size: 40px;
-  }
-
-  .homepage .txt p {
-    font-size: 14px;
-  }
-
-  .container a {
-    padding: 15px 30px;
-    font-size: 16px;
-  }
-
-  .head h1 {
-    font-size: 28px;
-  }
-
-  .head p {
-    font-size: 14px;
-  }
-
-  .serv {
-    width: 100%;
-    margin: 20px 0;
-  }
-
-  .serv h2 {
-    font-size: 18px;
-  }
-
-  .serv p {
-    font-size: 14px;
-  }
-
-  .txt2 h2 {
-    font-size: 28px;
-  }
-
-  .company-info h3,
-  .company-info p,
-  .mission-vision h3,
-  .mission-vision p,
-  .team h3,
-  .team ul {
-    font-size: 14px;
-  }
-
-  .team ul {
-    margin-left: 0;
-    padding-left: 20px;
-  }
-
-  .contact h2 {
-    font-size: 28px;
-  }
-
-  .contact p {
-    font-size: 14px;
-  }
-
-  .form {
-    max-width: 100%;
-  }
-}
-
